Actualizacion con Css

--- a/Modulo de HTML/Index.html
+++ b/Modulo de HTML/Index.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HW Modulo de HTML</title>
+    <link rel="stylesheet" href="stilos.css">
 </head>
 <body>
     <header>
-       <h1>INGENIERÍA BIOMÉDICA 2024</h1>  
-        <p>Por medio de la siguiente página WEB se tiene el objetivo de dar a conocer de forma muy 
-            básica los distintos campos en los que interviene la ingeniería aplicada 
-            a la salud en humanos
-         </p>   
-       <img src="./49-12.jpg" >
+        <h1>INGENIERÍA BIOMÉDICA 2024</h1>  
+      <div class="Titulo">
+            
+            <p class="p2">Por medio de la siguiente página WEB se tiene el objetivo de dar a conocer de forma muy 
+                básica los distintos campos en los que interviene la ingeniería aplicada 
+                a la salud en humanos
+            </p>   
+            <img src="./49-12.jpg" class="Portada">
+      </div> 
     </header>
     <main>
         <section>
